# actix-diesel-api

./: .env-dist  .env-docker  Cargo.toml  README.md  docker-compose.yml
api/: Cargo.toml
api/migrations/2021-02-19-194729_create_users/: up.sql
api/migrations/2021-03-14-075005_password/: down.sql  up.sql
api/migrations/2021-03-23-191345_roles/: down.sql  up.sql
api/src/: auth_handler.rs  errors.rs  handlers.rs  main.rs  schema.rs
api/src/handlers/: api_handler.rs  auth_handler.rs  mod.rs  register_handler.rs
db/: Cargo.toml
db/src/: lib.rs  models.rs  schema.rs
docker/diesel_cli/: Dockerfile  entrypoint.sh
docker/rust/: entrypoint.sh
front_app/: Dockerfile  package-lock.json  package.json
front_app/src/: App.svelte  Login.svelte
front_app/src/components/: Login.svelte
front_app/src/routes/: Home.svelte  Login.svelte  Logout.svelte
setup/: Cargo.toml
setup/src/: lib.rs
