[package]
name = "api"
version = "0.1.0"
edition = "2018"
authors = ["martin.fontana@spacefoot.com"]
default-run = "api"

[dependencies]
actix-cors = "0.5.4"
actix-identity = "0.3.1"
actix-web = { version = "3", features = ["openssl"] }
db = { path = "../db" }
diesel = { version = "1.4.5", features = ["mysql"] }
dotenv = "0.15.0"
env_logger = "0.8.3"
fake = "2.4"
futures = { version = "0.3", default-features = false }
openssl = { version = "0.10" }
r2d2 = "0.8.9"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
setup = { path = "../setup" }
derive_more = "0.99.11"